fix cards overlapping in the wrong order in hand

--- a/src/css/components/game/hand.component.scss
+++ b/src/css/components/game/hand.component.scss
@@ -10,6 +10,7 @@
     li {
         height: 100%;
         position: relative;
+        z-index: 0;
 
         card {
             height: 100%;
